Добавил блок с приветствием

--- a/index.html
+++ b/index.html
@@ -37,5 +37,22 @@
         </ul>
       </div>
     </header>
+    <!-- Блок с привествием -->
+    <main class="conteiner main">
+      <h1>Explore Boundless Horizons with OdysseyTrevel</h1>
+      <p>
+        Discover incredible travel opportunities with OdysseyTravel. We offer
+        unforgettable adventures, exhilarating routes, and the chance to immerse
+        yourself in unique cultures around the world. Whether you're seeking a
+        relaxing beach getaway, an exciting cruise, or a captivating tour of
+        Europe's historic cities, OdysseyTravel will help you turn your dreams
+        into reality. Our travel experts will go above and beyond to ensure that
+        each of your journeys is unforgettable and memorable. <br />
+        We strive to provide you with the highest level of service, comfort, and
+        safety throughout your travels. Let's embark on an exciting journey
+        together, one that will leave a lasting impression on your memories! The
+        adventure begins here, with OdysseyTravel.
+      </p>
+    </main>
   </body>
 </html>
