Добавил описание стран

--- a/pages/Countries.html
+++ b/pages/Countries.html
@@ -27,5 +27,61 @@
         </ul>
       </div>
     </header>
+    <main class="conteiner">
+      <section>
+        <h1></h1>
+        <article class="main" id="Dominican">
+          <h2>Dominican Republic</h2>
+          <img src="../img/dominicana.jpg" alt="Coast" />
+          <p>
+            The Dominican Republic is an amazing destination that attracts
+            tourists from around the world with its endless beaches, warm
+            climate, and rich cultural history. The undeniable centerpiece is
+            Punta Cana, known for its luxurious resorts, luxury hotels, and
+            endless white sandy beaches. Here, tourists can enjoy various water
+            activities such as diving, snorkeling, and surfing, as well as
+            embark on jungle excursions or visit picturesque waterfalls.
+          </p>
+        </article>
+        <article class="main" id="Caribbean">
+          <h2>Caribbean</h2>
+          <img src="../img/caribian.jpg" alt="Coast" />
+          <p>
+            The Caribbean region offers tourists a unique experience where they
+            can relax on secluded beaches, surrounded by palm trees, explore
+            ancient ruins, and immerse themselves in local culture and cuisine.
+            From lush tropical forests to volcanic mountains, the Caribbean
+            offers diverse travel and adventure opportunities. Tourists can also
+            visit various resort towns such as Nassau, Barbados, or Jamaica to
+            enjoy local hospitality and authentic atmosphere.
+          </p>
+        </article>
+        <article class="main" id="Mallorca">
+          <h2>Mallorca</h2>
+          <img src="../img/mayorka.jpg" alt="Hotel" />
+          <p>
+            Mallorca, the largest island in the Balearic Islands, is known for
+            its beautiful beaches, picturesque mountain landscapes, and rich
+            history. Here, tourists can enjoy a peaceful beach holiday, sample
+            local delicacies in cozy restaurants and bars, or embark on
+            excursions to medieval towns and castles. Mallorca also offers
+            plenty of opportunities for active leisure, including hiking in the
+            mountains, cycling tours, and water sports.
+          </p>
+        </article>
+        <article class="main" id="Bermudas">
+          <h2>Bermudas</h2>
+          <img src="../img/bermudas.jpg" alt="island" />
+          <p>
+            Bermuda is a paradise in the North Atlantic, known for its
+            crystal-clear waters, coral reefs, and architectural landmarks.
+            Here, tourists can enjoy a relaxing beach holiday, explore the
+            underwater world of snorkeling or diving, or take a stroll through
+            the streets of the old town with its colorful houses and historical
+            landmarks.
+          </p>
+        </article>
+      </section>
+    </main>
   </body>
 </html>
