Исправил пути для картинок, добавил кнопки для блоков с описанием стран

--- a/pages/Countries.html
+++ b/pages/Countries.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OdysseyTravel</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
     <header>
       <div class="conteiner">
-        <div class="logo"><a href="index.html">OdysseyTrevel</a></div>
+        <div class="logo"><a href="../index.html">OdysseyTrevel</a></div>
         <ul class="menu__list">
           <li class="menu__item"><a href="../index.html">Main</a></li>
           <li class="menu__item">
@@ -32,7 +32,7 @@
         <h1></h1>
         <article class="main" id="Dominican">
           <h2>Dominican Republic</h2>
-          <img src="../img/dominicana.jpg" alt="Coast" />
+          <img src="../images/dominicana.jpg" alt="Coast" />
           <p>
             The Dominican Republic is an amazing destination that attracts
             tourists from around the world with its endless beaches, warm
@@ -42,10 +42,11 @@
             activities such as diving, snorkeling, and surfing, as well as
             embark on jungle excursions or visit picturesque waterfalls.
           </p>
+          <a href="#">More</a>
         </article>
         <article class="main" id="Caribbean">
           <h2>Caribbean</h2>
-          <img src="../img/caribian.jpg" alt="Coast" />
+          <img src="../images/caribian.jpg" alt="Coast" />
           <p>
             The Caribbean region offers tourists a unique experience where they
             can relax on secluded beaches, surrounded by palm trees, explore
@@ -55,10 +56,11 @@
             visit various resort towns such as Nassau, Barbados, or Jamaica to
             enjoy local hospitality and authentic atmosphere.
           </p>
+          <a href="#">More</a>
         </article>
         <article class="main" id="Mallorca">
           <h2>Mallorca</h2>
-          <img src="../img/mayorka.jpg" alt="Hotel" />
+          <img src="../images/mayorka.jpg" alt="Hotel" />
           <p>
             Mallorca, the largest island in the Balearic Islands, is known for
             its beautiful beaches, picturesque mountain landscapes, and rich
@@ -68,10 +70,11 @@
             plenty of opportunities for active leisure, including hiking in the
             mountains, cycling tours, and water sports.
           </p>
+          <a href="#">More</a>
         </article>
         <article class="main" id="Bermudas">
           <h2>Bermudas</h2>
-          <img src="../img/bermudas.jpg" alt="island" />
+          <img src="../images/bermudas.jpg" alt="island" />
           <p>
             Bermuda is a paradise in the North Atlantic, known for its
             crystal-clear waters, coral reefs, and architectural landmarks.
@@ -80,6 +83,7 @@
             the streets of the old town with its colorful houses and historical
             landmarks.
           </p>
+          <a href="#">More</a>
         </article>
       </section>
     </main>
