--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <!-- Контейнер для задания общей ширины сайта -->
       <div class="conteiner">
         <!-- Логотип -->
-        <div class="logo"><a href="index.html">OdysseyTrevel</a></div>
+        <div class="logo"><a href="#">OdysseyTrevel</a></div>
         <!-- Меню -->
         <ul class="menu__list">
           <li class="menu__item"><a href="index.html">Main</a></li>
